--- a/src/components/onboarding/results/results.module.scss
+++ b/src/components/onboarding/results/results.module.scss
@@ -28,18 +28,18 @@
   margin-bottom: 2em;
 }
 
-.userData {
+.onboardingData {
   text-align: left;
   margin-bottom: 2em;
 }
 
-.userData h2 {
+.onboardingData h2 {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 0.5em;
 }
 
-.userData p {
+.onboardingData p {
   font-size: 16px;
   color: #666;
   margin: 0.25em 0;
