--- a/src/components/registration/verification/verification-form.modules.scss
+++ b/src/components/registration/verification/verification-form.modules.scss
@@ -6,3 +6,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.loading {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
