--- a/src/components/registration/register/register-form.modules.scss
+++ b/src/components/registration/register/register-form.modules.scss
@@ -206,6 +206,12 @@ label {
   flex-direction: row;
   justify-items: space-between;
   column-gap: 0.3em;
+
+  @media (max-width: $phone-width) {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 1em;
+  }
 }
 
 .terms {
