--- a/src/pages/not-found/not-found.modules.scss
+++ b/src/pages/not-found/not-found.modules.scss
@@ -8,7 +8,7 @@
   height: 100vh;
   width: 100vw;
 
-  background-image: url(./provisional-wallpaper-phone.jpg);
+  background-image: url(../../assets/provisional-wallpaper-phone.jpg);
   background-position-x: 30%;
   background-position-y: 70%;
   background-size: cover;
@@ -17,11 +17,11 @@
   font-family: $header-font;
 
   @media (min-width: $phone-width) {
-    background-image: url(./provisional-wallpaper-mobile.jpg);
+    background-image: url(../../assets/provisional-wallpaper-mobile.jpg);
   }
 
   @media (min-width: $mobile-width) {
-    background-image: url(./provisional-wallpaper.jpg);
+    background-image: url(../../assets/provisional-wallpaper.jpg);
     justify-content: center;
   }
 }
